test/conformance/kuttl/validate/clusterpolicy/standard/wildcard/block-verifyimage/01-policy.yaml
# Checks that the manifests.yaml file CANNOT be successfully created. If it can, fail the test as this is incorrect.

apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: policy.yaml
  shouldFail: true
